[package]
name = "eidpa-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
serde = "1.0"
eframe = { version = "0.29", default-features = false, features = [
    # accesskit struggles with threading
    "default_fonts",
    "wayland",
    "x11",
    "wgpu",
] }
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
# This is normally enabled by eframe/default, which is not being used here
# because of accesskit, as mentioned above
winit = { version = "0.30", features = [
    "default"
] }
